--- a/src/main/webapp/WEB-INF/views/first/hello_world.html
+++ b/src/main/webapp/WEB-INF/views/first/hello_world.html
@@ -3,8 +3,9 @@
 <body>
 <h1>Hello</h1>
 <p>Hello world</p>
-<a href="/good">goodbyref
+<a href="/good">goodbye
 
 </a>or <a href="/exit">Exit</a>
+or <a href="/first/hello?name=Tom&surname=Jone">Request with parameters</a>
 </body>
 </html>
