--- a/src/main/webapp/WEB-INF/views/first/hello_world.html
+++ b/src/main/webapp/WEB-INF/views/first/hello_world.html
@@ -7,5 +7,7 @@
 
 </a>or <a href="/exit">Exit</a>
 or <a href="/first/hello?name=Tom&surname=Jone">Request with parameters</a>
+<br>
+<p th:text="${message}"></p>
 </body>
 </html>
